# magic-card-search

./: .dir-locals.el  .ghci  .gitignore  ExecutablesFromBatches.bat  README.md  build.bat  cue fescue ^  default.nix  execute.bat  magic-card-search.cabal  munge-AllSets-x.sh  notes.txt  rebuild-nix-file.sh  reconfigure.sh  repl.sh  run.sh  shell.nix  stack.yaml  watch.bat  watch.sh
benchmarks/: Bench.hs
data/: OneCard-x.json  OneSet-x.json  SetList.json  SomeCards.json  SomeSets.json
executables/: DownloadImages.hs  Main.hs  Unzip.hs
sources/: Card.hs
sources/Card/: Core.hs  Download.hs  Example.hs  Extra.hs  JSONSchema.hs  Lens.hs  Record.hs  Schema.hs  Types.hs
temporary/: SomeCards.json
tests/: DocTest.hs
tests/Card/: Test.hs
